Pruning dead css, refactoring sidebar

--- a/djangocon/templates/blog/base.html
+++ b/djangocon/templates/blog/base.html
@@ -6,7 +6,7 @@
         <section class="grid_7 suffix_1" id="blog_content">
             {% block blog_content %}{% endblock blog_content %}
         </section>
-        <section class="grid_4" id="blog_sidebar">
+        <section class="grid_4 sidebar" id="blog_sidebar">
             {% block blog_sidebar %}
             {% endblock blog_sidebar %}
         </section>
