Improving email templates.

--- a/djangocon/templates/attendees/mail_payment_received.html
+++ b/djangocon/templates/attendees/mail_payment_received.html
@@ -1,8 +1,8 @@
 Hello {{ attendee.first_name }} {{ attendee.last_name }},
 
-we received your payment details. This is your booking confirmation!
+We received your payment details. This is your booking confirmation!
 
-Your booking information (you will need this mail to attend, don't delete!):
+Please keep this email safe as it is your conference ticket and receipt of payment.
 
 Your name: {{ attendee.first_name }} {{ attendee.last_name }}
 Your email: {{ attendee.email }}
@@ -13,4 +13,6 @@ Booking date: {{ attendee.date_added|date }}
 If you have any problems, just contact us by mail (feedback@djangocon.eu) or #djangocon (freenode irc).
 
 Thank you!
+
+The DjangoCon.eu Team
 
