--- a/djangocon/templates/attendees/payment_done.html
+++ b/djangocon/templates/attendees/payment_done.html
@@ -3,27 +3,23 @@
 {% block title %}Register{% endblock title %}
 
 {% block content %}
-    <div class="container_12 clearfix">
-        <div class="grid_7 suffix_1">
-            <section id="tickets_register">
-                <h1>Register for DjangoCon Europe 2010</h1>
-                <h2>You successfully registered for DjangoCon!</h2>
-                <p>
-                    You just finished the payment process to purchase your ticket for the next DjangoCon in Europe.
-                </p>
-                <p>
-                    We will send you booking confirmation immediately after we got your payment details from PayPal.
-                </p>
-            </section>
-        </div>
-        <div class="grid_4">
-            <section id="tickets_register">
-                <h1>Additional information</h1>
-                <h2>Contact</h2>
-                <p>
-                    If you have questions regarding the tickets, just send us a mail to <a href="mailto:feedback@djangocon.eu">feedback@djangocon.eu</a>.
-                </p>
-            </section>
-        </div>
-    </div>
+	<div class="container_12 clearfix">
+	    <section class="grid_7 suffix_1" id="tickets_register_ok">
+	        <h1>Register for DjangoCon Europe 2010</h1>
+			<h2>You successfully registered for DjangoCon!</h2>
+			<p>
+			    You just finished the payment process to purchase your ticket for the next DjangoCon in Europe.
+			</p>
+			<p>
+			    We will send you booking confirmation immediately after we got your payment details from PayPal.
+			</p>
+	    </section>
+	    <section class="grid_4 sidebar" id="tickets_sidebar_ok">
+			<h1>Additional information</h1>
+			<h2>Contact</h2>
+			<p>
+			    If you have questions regarding the tickets, just send us a mail to <a href="mailto:feedback@djangocon.eu">feedback@djangocon.eu</a>.
+			</p>		
+	    </section>
+	</div>
 {% endblock content %}
