Renaming VAT-Free sidebar section.

--- a/djangocon/templates/attendees/register.html
+++ b/djangocon/templates/attendees/register.html
@@ -88,7 +88,7 @@
                 Reimbursement / tax receipts for companies are only available at this rate. Included in your ticket purchase is
 				the warm fuzzy feeling of knowing you enabled more students to afford their attendance fee <em>and</em> food for the month.
             </p>
-            <h2>Special notes on VAT-ID</h2>
+            <h2>VAT-Free Corporate Rate</h2>
             <p>
                 European companies can fill in their VAT-ID and choose the VAT-free business ticket. We can only provide VAT-free
 				tickets if the stated VAT-ID can be validated.
